GeneWeb Version 2.00
--------------------

From the version 2.00, the license is GPL (GNU General Public
License). The previous license still applies up to the version 1.11
included.

* GeneWeb daemon/CGI (gwd)
  - [Feb 13, 99] Added ability to send photos.
  - [Feb 12, 99] Improved displaying in Hebrew language.
  - [Feb 8, 99] Fixed bug in CGI mode under Windows: images (flags e.g.) 
    were often truncated.

* Gedcom to GeneWeb (ged2gwb)
  - [Feb 14, 99] Assumed wrongly that all families were defined after
    individuals, because it is often the case in Gedcom files. But this is
    not mandatory in definition Gedcom 5.5. Fixed.
  - [Feb 6, 99] Accept dates with "/" (20/11/1993) although it is not
    standard Gedcom 5.5. Interpreted as day/month/year.

* GeneWeb compiler (gwc)
  - [Feb 8, 99] The option "-cg" did not work. Fixed.

* GeneWeb uncompiler (gwu)
  - [Feb 16, 99] Fixed bug: names holding "?" were sometimes not saved
    correctly, so that gwc did not work afterwards.

* Documentation
  - [Feb 15, 99] Completed info for configuration files in file "start.htm", 
    section "File a.cnf". Explained how to send photo (new feature) in file
    "update.htm": added section 5.6, completed section 3.
  - [Feb 11, 99] Updated Swedish version and fixed some errors in English
    version (Lars Gustavsson).
  - [Feb 10, 99] Updated Dutch version (Joris Esch).

GeneWeb Version 1.11
--------------------

* General
  - [Jan 27, 99] Added Hebrew (Jonathan Marder, Ruth Marder)

* GeneWeb daemon/CGI (gwd)
  - [Jan 30, 99] Added link to welcome page after updates.
  - [Jan 24, 99] Added default photo names: not necessary to specify a
    photo for someone, a default name is searched.
  - [Jan 20, 99; Jan 30, 99] Added display of latest deaths.
  - [Jan 19, 99] Added direct links to siblings.
  - [Jan 18, 99] Family comment now displayed like dates (=> possible
    visibility by password restriction).