@@ -475,10 +475,16 @@ top of the page.
 <p>
 
 <ul><li> <strong>can_send_photo</strong> allow the "wizards" to send
-photos. In this case in the <a href="update.htm#MAJ">update</a>
-process, they can click on a link titled <a
-href="update.htm#SndP">send photo</a>. By default, it is "no" (no
-authorization to send photos); to allow it, put "yes".
+(and delete) photos. In this case in the <a
+href="update.htm#MAJ">update</a> process, they can click on a link
+titled <a href="update.htm#SndP">send photo</a> (and possibly another
+one titled <a href="update.htm#DelPh">delete photo</a>). By default,
+it is "no" (no authorization to send photos); to allow it, put "yes".
+
+<p>
+
+Warning: the photos are recorded in your computer and therefore can
+use much disk space, if there are many photos sent.
 
 </ul>
 
