@@ -502,11 +502,19 @@ en cliquant dans son drapeau en haut de la page.
 <p>
 
 <ul><li> <strong>can_send_photo</strong> (peut envoyer des photos)
-permet d'autoriser les "sorciers" &agrave; envoyer des photos. Dans ce
-cas, au moment des <a href="update.htm#MAJ">mises &agrave; jour</a>,
-ils peuvent cliquer sur un lien <a href="update.htm#SndP">envoyer
-photo</a>. Par d&eacute;faut, c'est "no" (on ne peut pas en envoyer);
+permet d'autoriser les "sorciers" &agrave; envoyer (et supprimer) des
+photos. Dans ce cas, au moment des <a href="update.htm#MAJ">mises
+&agrave; jour</a>, ils peuvent cliquer sur un lien <a
+href="update.htm#SndP">envoyer photo</a> (et &eacute;ventuellement un
+autre intitul&eacute; <a href="update.htm#DelPh">supprimer
+photo</a>). Par d&eacute;faut, c'est "no" (on ne peut pas en envoyer);
 pour l'autoriser, il faut mettre explicitement "yes".
+
+<p>
+
+Attention: les photos seront enregistr&eacute;es sur votre ordinateur,
+et peuvent donc consommer beaucoup d'espace disque, s'il y a beaucoup
+de photos envoy&eacute;es.
 
 </ul>
 
