@@ -54,6 +54,8 @@ d'un enfant.
 
 <li> <a href="#SndP">5.6.</a> Envoyer une photo.
 
+<li> <a href="#DelPh">5.7.</a> Supprimer une photo.
+
 </ul>
 
 <li> <a href="#MrgP">6.</a> Comment fusionner deux personnes.
@@ -242,13 +244,16 @@ personne. Reportez-vous aux sections:
 
 Si le propri&eacute;taire de la base l'a autoris&eacute;, (voir <a
 href="start.htm#Cnf">fichier de configuration</a>), vous aurez le
-choix "Envoyer photo". Reportez-vous &agrave; la section:
+choix "Envoyer photo" et &eacute;ventuellement "Supprimer
+photo". Reportez-vous aux sections:
 
 <p>
 
 <ul>
 
 <li> <a href="#SndP">Envoyer une Photo</a>
+
+<li> <a href="#DelPh">Supprimer une Photo</a>
 
 </ul>
 
@@ -1267,20 +1272,33 @@ enfants.
 Vous tomberez sur ce formulaire &agrave; partir d'une page personnelle
 apr&egrave;s avoir cliqu&eacute; sur "Mise &agrave; jour", puis
 "Envoyer photo", &agrave; condition que le propri&eacute;taire de la
-base en ait donn&eacute; l'<a href="start.htm#Cnf">autorisation</a>.
+base en ait donn&eacute; l'<a href="start.htm#Cnf">autorisation</a>,
+et que le champ "photo" de la personne soit vide.
 
 <p>
 
 Il s'agit d'envoyer un fichier "gif" ou "jpeg" qui sera associ&eacute;
 &agrave; la personne. Si cette personne avait d&eacute;j&agrave; une
-photo, la v&ocirc;tre la remplacera.
+photo, celle que vous enverrez la remplacera.
 
 <p>
 
-Note importante: il faut que le champ "Photo" de la personne soit
-vide, sinon, c'est ce champ-l&agrave; qui sera pris pour la photo, pas
-la photo que vous avez envoy&eacute;e. S'il est rempli, faites "Mise
-&agrave; jour" et "Modifier personne" pour le supprimer.
+Note: si le champ "Photo" de la personne n'est pas vide, vous n'aurez
+pas acc&egrave;s &agrave; "envoyer photo". Si vous voulez le faire,
+faites "Mise &agrave; jour" et "Modifier personne" et effacez le
+contenu du champ "photo".
+
+<h4> <a name="DelPh">5.7.</a> Supprimer une Photo </h4>
+
+Vous tomberez sur ce formulaire &agrave; partir d'une page personnelle
+apr&egrave;s avoir cliqu&eacute; sur "Mise &agrave; jour", puis
+"Supprimer photo", &agrave; condition que le propri&eacute;taire de la
+base en ait donn&eacute; l'<a href="start.htm#Cnf">autorisation</a>.
+
+<p>
+
+Si vous cliquez sur "Ok", la photo associ&eacute;e &agrave; la personne
+est supprim&eacute;e.
 
 <h4> <a name="MrgP">6.</a> Comment fusionner deux personnes </h4>
 
