@@ -1,4 +1,4 @@
-(* $Id: util.mli,v 1.16 1999-02-14 19:31:36 ddr Exp $ *)
+(* $Id: util.mli,v 1.17 1999-02-18 15:52:57 ddr Exp $ *)
 (* Copyright (c) 1999 INRIA *)
 
 open Def;
@@ -99,3 +99,4 @@ value sosa_of_branch : list (iper * sex) -> Num.t;
 value print_link_to_welcome : config -> bool -> unit;
 
 value default_photo_name : base -> base_person -> string;
+value auto_photo_file : config -> base -> base_person -> option string;
